--- a/src/index.css
+++ b/src/index.css
@@ -8,3 +8,9 @@
     /* Color */
     --color-border-gray: #DDDDDD;
 }
+
+html, body, #root {width:100%; margin: 0; padding: 0; overflow-x: hidden; }
+#searchBar
+{
+    background-color: white;
+}
