--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&display=swap');
+@import url('./normalize.css');
 @tailwind utilities;
 
 @theme {
@@ -6,11 +7,6 @@
     --font-nunito-sans: "Nunito Sans", sans-serif;
 
     /* Color */
-    --color-border-gray: #DDDDDD;
-}
-
-html, body, #root {width:100%; margin: 0; padding: 0; overflow-x: hidden; }
-#searchBar
-{
-    background-color: white;
+    --color-gray: #DDDDDD;
+    --color-white: #FFFFFF;
 }
