--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&display=swap');
 @import url('./normalize.css');
+@import "tailwindcss";
 @tailwind utilities;
 
 @theme {
@@ -10,3 +11,4 @@
     --color-gray: #DDDDDD;
     --color-white: #FFFFFF;
 }
+
